# ehremr

./: .env.example  .gitignore  BUSINESS_OVERVIEW.md  GUIDE.md  Makefile  README.md  TESTING.md  pyproject.toml  requirements-dev.txt  requirements.txt  test_report.txt
examples/: batch_transcribe.py  live_stream.py  submit_to_fhir.py
src/ehr_integration/: __init__.py
src/ehr_integration/ehr/: __init__.py  base_ehr_client.py  cerner_client.py  epic_client.py
src/ehr_integration/fhir/: __init__.py  document_reference.py  fhir_client.py
src/ehr_integration/hl7/: __init__.py  mdm_builder.py  oru_builder.py
src/ehr_integration/transcription/: __init__.py  batch.py  models.py  streaming.py
src/ehr_integration/use_cases/: __init__.py  ambient_documentation.py  contact_center.py  dictation.py  telehealth.py
tests/: conftest.py
tests/fixtures/: audio.py  fhir_document_ref.json  hl7_mdm_message.txt  sample_live_transcript.json  sample_transcript.json
tests/integration/: test_ambient_documentation_flow.py  test_ehr_submission_flow.py
tests/live/: conftest.py  test_cerner_sandbox.py  test_deepgram_live.py  test_epic_sandbox.py  test_hapi_fhir_validator.py
tests/quality/: test_fhir_schema_validation.py  test_hl7_deep_validation.py  test_property_based.py
tests/unit/: test_batch_transcription.py  test_ehr_clients.py  test_fhir_builder.py  test_fhir_client.py  test_hl7_mdm_builder.py  test_streaming.py  test_use_cases.py
